fixed overflows

--- a/src/styles/Calendar.css
+++ b/src/styles/Calendar.css
@@ -10,8 +10,8 @@
 }
 
 .iconCalendar{
-    height: calc(20px + 1vw);
-    width: calc(20px + 1vw);
+    height: calc(15px + 1vw);
+    width: calc(15px + 1vw);
     margin-right: 5px;
     background-image: url(../images/calendar.png);
     background-size: contain;
@@ -66,7 +66,7 @@ input[type=date]::-webkit-calendar-picker-indicator
 
     .inputContainer{
         justify-content: space-evenly;
-        margin-bottom: 15%;
+        margin-bottom: 10%;
         width: 90vw;
         height: 50px;
         
