--- a/src/styles/Indicator.css
+++ b/src/styles/Indicator.css
@@ -89,7 +89,7 @@
     .indicatorContainerA{
         width: 90vw;
         height: 13vh;  
-        margin-bottom: 10%;
+        margin-bottom: 7%;
     }
 
     .indicatorContainerB{
